[package]
name = "xs233-sys"
version = "0.1.0"
edition = "2021"
authors = [ "Jan Winkelmann (keks)" ]
description = "FFI bindings for the xs233 binary elliptic curves."
readme = "README.md"
repository = "https://github.com/keks/xs233-sys"
keywords = ["cryptography", "bindings", "ecc", "elliptic", "curve"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.65.1"
cc = "1.0.79"
